# NeuralNet

./: .editorconfig  .gitignore  CMakeLists.txt  NeuralNet.hpp  README.md  nn.cpp
