cmake_minimum_required(VERSION 3.15)
set(CMAKE_TOOLCHAIN_FILE "D:\\vcpkg\\scripts\\buildsystems\\vcpkg.cmake")
project(NN)
set(CMAKE_INCLUDE_CURRENT_DIR TRUE)
find_package(Eigen3 REQUIRED)
find_package(BLAS REQUIRED)
find_package(OpenMP)
add_executable(nn nn.cpp)
target_link_libraries(nn Eigen3::Eigen ${BLAS_LIBRARIES} OpenMP::OpenMP_CXX)